# irgen

./: CODE_REVIEW_REPORT.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build.rs  example.xlsx  example_simple.xlsx  snapsheet.toml
.github/workflows/: ci.yml  release.yml
assets/templates/: c_header.tera  html.tera  sv_rtl.tera  uvm_ral.tera
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: assets.rs  config.rs  error.rs  lib.rs  main.rs
crates/core/src/processing/: excel.rs  parser.rs
crates/docs/: Cargo.toml
crates/docs/assets/: register_reference.css  register_reference.js
crates/docs/src/: anchor.rs  error.rs  html.rs  ipxact.rs  lib.rs  model.rs  view.rs
crates/docs/templates/: block_reference.html  register_detail.html  register_reference.html
crates/ipxact/: Cargo.toml
crates/ipxact-codegen/: Cargo.toml
crates/ipxact-codegen/src/: main.rs
crates/ipxact-model/: Cargo.toml
crates/ipxact-model/src/: expression.rs  lib.rs
crates/ipxact-parser/: Cargo.toml
crates/ipxact-parser/src/: lib.rs  parse.rs
crates/ipxact-parser/tests/: ipxact_parse.rs
crates/ipxact/schema/: README.md
crates/ipxact/schema/1.4/: abstractor.xsd  autoConfigure.xsd  busDefinition.xsd  busInterface.xsd  commonStructures.xsd  component.xsd  configurable.xsd  constraints.xsd  design.xsd  designConfig.xsd  file.xsd  fileType.xsd  generator.xsd  identifier.xsd  index.xsd  memoryMap.xsd  model.xsd  signalDrivers.xsd  simpleTypes.xsd  subInstances.xsd
crates/ipxact/src/: attr.rs  error.rs  export.rs  lib.rs
crates/ipxact/src/v1_4/: mod.rs
crates/ipxact/src/v1_4/types/: configurable.rs  file_type.rs  mod.rs  quick_xml_deserialize.rs  quick_xml_serialize.rs  simple_types.rs
crates/ipxact/src/v1_5/: mod.rs
crates/ipxact/src/v1_5/types/: configurable.rs  file_type.rs  mod.rs  quick_xml_deserialize.rs  quick_xml_serialize.rs  simple_types.rs
crates/ipxact/src/v2009/: mod.rs
crates/ipxact/src/v2009/enums/: access_type.rs  component_port_direction.rs  endianess_type.rs  ip_xact_version.rs  mod.rs
crates/ipxact/src/v2009/types/: additional_types.rs  address_block.rs  design.rs  (+16 more)
crates/ipxact/src/v2014/: mod.rs
crates/ipxact/src/v2022/: mod.rs
crates/ipxact/tests/: ipxact_xml.rs  v2009_test.rs  v2014_test.rs  v2022_test.rs
crates/ipxact/tests/fixtures/: component_v2009.xml
crates/model/: Cargo.toml
crates/model/src/: attr.rs  base.rs  error.rs  ipxact.rs  lib.rs
crates/model/tests/: ipxact_xml.rs
crates/ralf/: Cargo.toml
crates/ralf/src/: ast.rs  convert.rs  error.rs  lib.rs  serialize.rs  tests.rs  util.rs  writer.rs
crates/ralf/tests/: ralf.rs
crates/snapsheet/: Cargo.toml
crates/snapsheet/src/: attr.rs  config.rs  error.rs  excel.rs  lib.rs  model.rs  number.rs  register.rs  transform.rs
crates/snapsheet/tests/: invalid_workbooks.rs  load_example.rs
crates/snapsheet/tests/fixtures/: conflicting_registers.xlsx  duplicate_fields.xlsx  generate.py  invalid_attribute.xlsx  malformed_range.xlsx  out_of_range_register.xlsx  overlapping_fields.xlsx
crates/systemrdl/: Cargo.toml
crates/systemrdl/src/: ast.rs  convert.rs  error.rs  lib.rs  serialize.rs  tests.rs  util.rs  writer.rs
crates/systemrdl/tests/: systemrdl.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/src/: assets.rs  config.rs  global.rs  main.rs
crates/ui/src/app/: workspace.rs
crates/ui/src/app/workspace/: actions.rs  components.rs  notifications.rs
crates/ui/src/app/workspace/components/: file_upload.rs  file_upload_selected.rs  footer.rs  header.rs  layout.rs  register_detail.rs  register_explorer.rs  register_tree.rs  title_bar.rs
crates/uvmreg/: Cargo.toml
crates/uvmreg/src/: lib.rs  model.rs  numeric.rs  parse.rs  render.rs
crates/uvmreg/templates/: block_class.sv  memory_class.sv  package.sv  register_class.sv  register_file_class.sv
crates/uvmreg/tests/: uvmreg.rs
docs/: ipxact-2014-compliance.md  ipxact-compliance-audit.md  ipxact-generation.md  ralf-generation.md  roadmap.md  snapsheet-format.md  snapsheet-spec.example.toml  systemrdl-generation.md  uvmreg-generation.md
examples/: example.ods  example_simple.ods  example_simple.xlsm
resources/: app-icon.icns
resources/templates/: c_header.tera  html.tera  sv_rtl.tera  uvm_ral.tera
resources/windows/: installer.nsi  installer.wxs
scripts/: create_example_simple.mjs  windows-release.ps1
src/: assets.rs  config.rs  error.rs  global.rs  main.rs  processing.rs  services.rs  state.rs  window.rs  workspace.rs
src/processing/: excel.rs  parser.rs
src/processing/schema/: attr.rs  base.rs
src/services/: parser.rs
src/services/schema/: attr.rs  base.rs  mod.rs
src/ui/: window.rs  workspace.rs
src/ui/workspace/: actions.rs  components.rs
src/ui/workspace/components/: file_upload.rs  file_upload_empty.rs  file_upload_selected.rs  footer.rs  header.rs  layout.rs  style.rs  title_bar.rs
src/workspace/: action.rs  title_bar.rs
(+335 files in other folders)
