[workspace]
members = ["crates/core", "crates/ui"]
default-members = ["crates/ui"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
calamine = { version = "0.33", features = ["dates"] }
polars = { version = "0.52", default-features = false, features = ["lazy", "strings", "regex", "string_to_integer", "range", "rank", "dtype-u128", "dtype-i128", "dtype-array", "temporal", "moment", "timezones"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
quick-xml = { version = "0.39", features = ["serialize"] }
derive_builder = "0.20"
rust-embed = "8.11"
tera = "1"
lazy_static = "1"
dirs = "6"
winresource = "0.1"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
