[workspace]
members = [
    "crates/cli",
    "crates/ipxact",
    "crates/model",
    "crates/snapsheet",
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
calamine = { version = "0.33", features = ["dates"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
quick-xml = { version = "0.39", features = ["serialize"] }
derive_builder = "0.20"
toml = "0.8"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
