[workspace]
members = [
    "crates/cli",
    "crates/docs",
    "crates/ipxact",
    "crates/ipxact-codegen",
    "crates/model",
    "crates/ralf",
    "crates/snapsheet",
    "crates/systemrdl",
    "crates/uvmreg",
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"

[workspace.dependencies]
calamine = { version = "0.33", features = ["dates"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
quick-xml = { version = "0.39", features = ["serialize"] }
toml = "0.8"
xsd-parser-types = { version = "0.2.1", features = ["xml", "quick-xml"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
