[package]
name = "irgen-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "irgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
irgen-model = { path = "../model" }
ip-xact = { path = "../ipxact" }
irgen-docs = { path = "../docs" }
irgen-ralf = { path = "../ralf" }
irgen-snapsheet = { path = "../snapsheet" }
irgen-systemrdl = { path = "../systemrdl" }
