[package]
name = "irgen-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "irgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ip-xact = { package = "irgen-ip-xact", path = "../ipxact" }
irgen-docs = { path = "../docs" }
irgen-ipxact-model = { path = "../ipxact-model" }
irgen-ipxact-parser = { path = "../ipxact-parser" }
irgen-ralf = { path = "../ralf" }
irgen-snapsheet = { path = "../snapsheet" }
irgen-systemrdl = { path = "../systemrdl" }
irgen-uvmreg = { path = "../uvmreg" }
